--- a/src/index.html
+++ b/src/index.html
@@ -142,12 +142,20 @@
         <div class="modes__btns modes__timer-btns">
           <button
             class="modes__btn modes__timer-btn modes__btn--start modes__timer-btn--start">
-            <ion-icon
+            <!-- <ion-icon
               name="play"
-              class="modes__icon modes__timer-icon modes__icon--play modes__timer-icon--play"></ion-icon>
-            <ion-icon
+              class="modes__icon modes__timer-icon modes__icon--play modes__timer-icon--play"></ion-icon> -->
+            <span
+              class="modes__icon modes__timer-icon modes__icon--play modes__timer-icon--play">
+              ▶
+            </span>
+            <!-- <ion-icon
               name="pause-outline"
-              class="modes__icon modes__timer-icon modes__icon--pause modes__timer-icon--pause hidden"></ion-icon>
+              class="modes__icon modes__timer-icon modes__icon--pause modes__timer-icon--pause hidden"></ion-icon> -->
+            <span
+              class="modes__icon modes__timer-icon modes__icon--pause modes__timer-icon--pause hidden">
+              ⏸
+            </span>
           </button>
 
           <button
@@ -155,6 +163,7 @@
             <ion-icon
               name="stop"
               class="modes__icon modes__timer-icon"></ion-icon>
+            <span class="modes__icon modes__timer-icon"> ⏹ </span>
           </button>
         </div>
       </section>
